[package]
name = "hyprland-parser"
version = "0.1.0"
authors = ["Nyx <nnyyxxxx@protonmail.com>"]
license = "GPL-2.0"
description = "A parser for Hyprland's configuration file."
repository = "https://github.com/nnyyxxxx/hyprparser.git"
readme = "readme.md"
keywords = [
    "parser",
    "hyprland",
    "wayland",
    "config",
]
categories = ["parser"]
edition = "2021"

[dependencies]
hyprland-parser = { path = "hyprland-parser" }
